packages/next-swc/crates/core/tests/errors/next-font-loaders/export-let/output.js
import firaCode from '@next/font/google/target.css?{"arguments":[],"import":"Abel","path":"pages/test.tsx"}';
import inter from '@next/font/google/target.css?{"arguments":[],"import":"Inter","path":"pages/test.tsx"}';
import React from 'react';
export { firaCode };
export { inter };
